--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
