--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-  
 {
   "name": "google-clone",
   "version": "0.1.0",
@@ -36,6 +34,8 @@
       "not dead",
       "not op_mini all"
     ],
+    "author": "Krishnkant",
+    "license": "ISC",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -51,7 +51,7 @@
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.14"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "engines": {
     "node": "16.x"
