--- a/package.json
+++ b/package.json
@@ -53,7 +53,5 @@
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
-  "engines": {
-    "node": "16.x"
-  }
+  "engines":{ "node": "14.x" }
 }
